force-app/main/default/objects/Donations__c/Donations__c.object-meta.xml
<CustomObject>
    <label>Donation</label>
    <nameField>
        <label>Donation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>