force-app/main/default/objects/Donations__c/fields/Card_total__c.field-meta.xml
<CustomField>
    <fullName>Card_total__c</fullName>
    <label>Card total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>