force-app/main/default/objects/Donations__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>MID(DateTime__c, 0, 10)</formula>
    <label>Date</label>
    <type>Text</type>
</CustomField>