force-app/main/default/objects/Donations__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>DateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>