force-app/main/default/objects/Donations__c/fields/Excluded_from_lottery__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_lottery__c</fullName>
    <formula>IF(CONTAINS(Description__c ,&apos;Від: Олесь Матюшенко&apos;) ||
CONTAINS(Description__c ,&apos;Від: Наталія Матюшенко&apos;) ||
CONTAINS(Description__c ,&apos;З чорної картки&apos;), 
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excluded from lottery</label>
    <type>Checkbox</type>
</CustomField>