force-app/main/default/objects/Donations__c/fields/RRN__c.field-meta.xml
<CustomField>
    <fullName>RRN__c</fullName>
    <label>RRN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>