force-app/main/default/objects/Donations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DateTime__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>